# vellum

./: .gitignore  LICENSE  README.md  pyproject.toml
ui/: package-lock.json  package.json  tsconfig.json
ui/src/: index.ts
ui/src/agentic/: index.ts
ui/src/auth/: index.ts
ui/src/core/: api.ts  index.ts  provider.tsx  theme.ts
ui/src/forms/: index.ts
ui/src/negotiation/: hooks.ts  index.ts  service.ts  types.ts
ui/src/schema/: entity-config.ts  field-registry.ts  index.ts
ui/src/seal/: index.ts
ui/src/settings/: index.ts
ui/src/tables/: column-factory.ts  index.ts  utils.ts
vellum/: __init__.py
vellum/core/: __init__.py  logging.py
vellum/events/: __init__.py  memory_store.py  protocols.py  stamps.py  types.py
vellum/identity/: __init__.py  protocols.py  rbac.py  types.py
vellum/middleware/: __init__.py  memory_store.py  protocols.py  types.py
vellum/negotiation/: __init__.py  consensus_config.py  entity_config.py  field_state_machine.py  namespace_adapter.py  proposal_store.py  proposal_types.py
vellum/persistence/: __init__.py  pipeline.py  protocols.py  simple_resolver.py  types.py
vellum/sealing/: __init__.py  hasher.py  protocols.py  types.py
vellum/statemachine/: __init__.py  engine.py  protocols.py  types.py
vellum/tests/: test_events.py  test_identity.py  test_middleware.py  test_persistence.py  test_statemachine.py
