[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vellum"
version = "0.1.0"
description = "Domain-agnostic enterprise engine: negotiation, persistence, integrity, identity, middleware, and event sourcing"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["negotiation", "consensus", "state-machine", "multi-party", "workflow", "persistence", "pipeline", "sealing", "integrity", "hashing", "rbac", "identity", "idempotency", "rate-limiting", "retry", "audit", "event-sourcing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/mcevoyinit/vellum"
Documentation = "https://github.com/mcevoyinit/vellum"

[tool.hatch.build.targets.wheel]
packages = ["vellum"]

[tool.hatch.build.targets.sdist]
include = ["vellum/"]
exclude = ["vellum/demos/"]
